--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,12 @@ body::before {
 }
 
 a {
-  color: #6F04D9;
+  color: #b871ff;
   text-decoration: none;
 }
 
 a:hover {
-  color: #6F04D9;
+  color: #9326ff;
   text-decoration: none;
 }
 
