--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1183,3 +1183,10 @@ section .container {
 .credits a:hover {
   color: #fff;
 }
+
+.img-fluid {
+  float: left;
+  width: 100%;
+  height: 16rem;
+  object-fit: cover;
+}
