--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,10 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+html {
+  background-color: #040404;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
